--- a/src/pages/Inscription/subscription.html
+++ b/src/pages/Inscription/subscription.html
@@ -36,7 +36,7 @@
             <ion-row>
               <ion-col>
                 <ion-item no-lines class="txt-title-D">
-                  <ion-input [value]="clearName" type="text" autofocus formControlName="prenom" placeholder='{{"msg.inscription.prenom"|translate}}'></ion-input>
+                  <ion-input [value]="clearNameP" type="text" autofocus formControlName="prenom" placeholder='{{"msg.inscription.prenom"|translate}}'></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
@@ -44,7 +44,7 @@
             <ion-row>
               <ion-col>
                 <ion-item no-lines class="txt-title-D">
-                  <ion-input [value]="clearName" type="text" autofocus formControlName="nom" placeholder='{{"msg.inscription.nom"|translate}}'></ion-input>
+                  <ion-input [value]="clearNameN" type="text" autofocus formControlName="nom" placeholder='{{"msg.inscription.nom"|translate}}'></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
@@ -52,7 +52,7 @@
             <ion-row>
               <ion-col>
                 <ion-item no-lines class="txt-title-D">
-                  <ion-input type="text" [value]="clearName" formControlName="mail" placeholder='{{"msg.inscription.email"|translate}}'></ion-input>
+                  <ion-input type="text" [value]="clearNameM" formControlName="mail" placeholder='{{"msg.inscription.email"|translate}}'></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
