--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -68,8 +68,7 @@ background-repeat: no-repeat;">
   <span class="right" style="color:white;font-size: 0.7em; float:right; padding-top:1px; padding-right:20px;">{{"msg.site.citation.nom" | translate}}</span></div>
 
   <div class="bar bar-footer center" style="position: fixed; bottom:22px; padding-left:36%;"><img style="float: center;vertical-align: top; " alt="webDia" src="assets/img/logo_hug_new.png" height="22" border="0"><span class="left" style="display:inline-block; margin-left:19px; font-size:0.5em; ;color:white;"><span>Hôpitaux</span><br><span>Universitaires</span><br><span>Genève</span></span></div><br>
-<ion-footer *ngIf="!display" class="title center footer">
-   
+<ion-footer class="title center footer">
 <div class="txt-footer">{{"msg.footer" | translate}}</div>
 </ion-footer>
 
