--- a/src/pages/configuration/configuration.html
+++ b/src/pages/configuration/configuration.html
@@ -54,48 +54,48 @@
         <ion-row >
               <ion-col  col-8>
                   <ion-item no-lines class="itemConf list-conf-rb">
-                 <ion-label ><font size="1rem"> {{"frm.config.valeurRecherche"|translate}}</font></ion-label>
+                 <ion-label>{{"frm.config.valeurRecherche"|translate}}</ion-label>
                   </ion-item>
                 </ion-col>  
               <ion-col style="padding-left:8px;" col-4>
                   <ion-item no-lines class="itemConf list-conf-rb">
-                  <ion-input  maxlength="4" class="input-Conf" type="tel" style="font-size:0.8em;" center formControlName="valeur" placeholder="mmol/l" ></ion-input>
+                  <ion-input  maxlength="4" class="input-Conf" type="tel" center formControlName="valeur" placeholder="mmol/l" ></ion-input>
                 </ion-item>
                 </ion-col> 
         </ion-row>
          <ion-row > 
                 <ion-col col-8>
                     <ion-item  no-lines  class=" itemConf list-conf-rb"> 
-                  <ion-label  > <font size="1rem">{{"frm.config.correctionJour"|translate}}</font></ion-label >
+                  <ion-label  >{{"frm.config.correctionJour"|translate}}</ion-label >
                   </ion-item>
                 </ion-col>
                 <ion-col style="padding-left:8px;" col-4>
                     <ion-item no-lines  class=" itemConf list-conf-rb"> 
-                    <ion-input maxlength="4" class="input-Conf"  style="font-size:0.8em;" type="tel" center formControlName="correctionJour" placeholder="mmol/l" ></ion-input>
+                    <ion-input maxlength="4" class="input-Conf" type="tel" center formControlName="correctionJour" placeholder="mmol/l" ></ion-input>
                     </ion-item>
                 </ion-col>
           </ion-row> 
           <ion-row >  
               <ion-col col-8>
                   <ion-item  no-lines class=" itemConf list-conf-rb">
-                  <ion-label ><font size="1rem">{{"frm.config.correctionNuit"|translate}}</font></ion-label>
+                  <ion-label >{{"frm.config.correctionNuit"|translate}}</ion-label>
                   </ion-item>
               </ion-col>  
               <ion-col style="padding-left:8px;" col-4>
                   <ion-item no-lines class=" itemConf list-conf-rb">
-                  <ion-input  maxlength="4"  class=" input-Conf" style="font-size:0.8em;"  type="tel" center  formControlName="correctionNuit" placeholder="mmol/l" ></ion-input>
+                  <ion-input  maxlength="4"  class=" input-Conf" type="tel" center  formControlName="correctionNuit" placeholder="mmol/l" ></ion-input>
                   </ion-item>
               </ion-col> 
           </ion-row> 
           <ion-row>
                 <ion-col col-8>
                     <ion-item  no-lines class=" itemConf list-conf-rb">
-                    <ion-label ><font size="1rem"> {{"frm.config.dureeInsuline"|translate}}</font></ion-label>
+                    <ion-label >{{"frm.config.dureeInsuline"|translate}}</ion-label>
                     </ion-item>
                 </ion-col>
                 <ion-col style="padding-left:8px;" col-4>
                     <ion-item no-lines class=" itemConf list-conf-rb">
-                    <ion-input  maxlength="4" class=" input-Conf" style="font-size:0.8em;" type="tel" center formControlName="dureeAction" placeholder="min." ></ion-input>
+                    <ion-input  maxlength="4" class=" input-Conf" type="tel" center formControlName="dureeAction" placeholder="min." ></ion-input>
                     </ion-item>
                </ion-col>
           </ion-row> 
@@ -107,17 +107,17 @@
             <span>{{"msg.petitdejeuner"|translate}}</span>
           </ion-row>
           <ion-row center>
-            <ion-col col-4 ><ion-item no-lines class=" itemConf list-conf-rb"><ion-input maxlength="4" class=" input-Conf" style="font-size:0.8em;"  type="tel" formControlName="unite1" placeholder='{{"msg.xUnite"|translate}}'></ion-input></ion-item></ion-col>
+            <ion-col col-4 ><ion-item no-lines class=" itemConf list-conf-rb"><ion-input maxlength="4" class=" input-Conf" type="tel" formControlName="unite1" placeholder='{{"msg.xUnite"|translate}}'></ion-input></ion-item></ion-col>
             <ion-col>/</ion-col>
-            <ion-col col-4 ><ion-item no-lines class=" itemConf list-conf-rb"><ion-input maxlength="4"  class=" input-Conf" style="font-size:0.8em;"  type="tel" formControlName="hdc1" placeholder='{{"msg.xHdC"|translate}}'></ion-input></ion-item></ion-col>
+            <ion-col col-4 ><ion-item no-lines class=" itemConf list-conf-rb"><ion-input maxlength="4"  class=" input-Conf" type="tel" formControlName="hdc1" placeholder='{{"msg.xHdC"|translate}}'></ion-input></ion-item></ion-col>
           </ion-row>
           <ion-row>
             <span>{{"msg.collation10"|translate}}</span>
           </ion-row>
           <ion-row>
-            <ion-col col-4><ion-item no-lines class=" itemConf list-conf-rb"><ion-input maxlength="4"  class=" input-Conf" style="font-size:0.8em;"  type="number" formControlName="unite2" placeholder='{{"msg.xUnite"|translate}}'></ion-input></ion-item></ion-col>
+            <ion-col col-4><ion-item no-lines class=" itemConf list-conf-rb"><ion-input maxlength="4"  class=" input-Conf" type="number" formControlName="unite2" placeholder='{{"msg.xUnite"|translate}}'></ion-input></ion-item></ion-col>
             <ion-col>/</ion-col>
-            <ion-col col-4><ion-item no-lines class=" itemConf list-conf-rb"><ion-input maxlength="4"  class=" input-Conf" style="font-size:0.8em;"  type="number" formControlName="hdc2" placeholder='{{"msg.xHdC"|translate}}'></ion-input></ion-item></ion-col>
+            <ion-col col-4><ion-item no-lines class=" itemConf list-conf-rb"><ion-input maxlength="4"  class=" input-Conf" type="number" formControlName="hdc2" placeholder='{{"msg.xHdC"|translate}}'></ion-input></ion-item></ion-col>
           </ion-row>
           <ion-row>
             <span>{{"msg.midi"|translate}}</span>
