--- a/src/pages/alimentTabs/ajoutAliment/ajoutAliment.html
+++ b/src/pages/alimentTabs/ajoutAliment/ajoutAliment.html
@@ -24,7 +24,7 @@
         <ion-row class="center">
           <ion-col width-100 class="center-col">
             <ion-item no-lines class="itemConf list-conf-rb" >
-              <ion-input [value]="clearNom" name="nom" required autofocus type="text" placeholder='{{"msg.nom.aliment"|translate}}' (keyup)="onChangeNom($event.target.value)"></ion-input>
+              <ion-input [value]="nom" name="nom" required autofocus type="text" placeholder='{{"msg.nom.aliment"|translate}}' (keyup)="onChangeNom($event.target.value)"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -34,7 +34,7 @@
         <ion-row class="center">
           <ion-col width-50 class="center-col">
             <ion-item no-lines class="itemConf list-conf-rb" >
-              <ion-input [value]="clearHdc" name="nbHdc" required type="number" placeholder='{{"frm.monAliment.nbHdc"|translate}}' (keyup)="onChangeHdc($event.target.value)"></ion-input>
+              <ion-input [value]="nbHdc" name="nbHdc" required type="number" placeholder='{{"frm.monAliment.nbHdc"|translate}}' (keyup)="onChangeHdc($event.target.value)"></ion-input>
             </ion-item>
           </ion-col>
           <ion-col width-50 class="center-col">
